* fix designer build error * add docker file for host * add github action file

--- a/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Installer/Passingwind.Abp.ElsaModule.Installer.csproj
@@ -6,6 +6,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
