--- a/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
+++ b/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\common.props" />
+    <Import Project="..\..\common.props" />
 
-  <PropertyGroup>
-      <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.MongoDB" Version="5.1.4" />
-    <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Volo.Abp.MongoDB" Version="5.1.4" />
+        <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
+    </ItemGroup>
 
 </Project>
