--- a/host/Passingwind.Abp.ElsaModule.Host.Shared/Passingwind.Abp.ElsaModule.Host.Shared.csproj
+++ b/host/Passingwind.Abp.ElsaModule.Host.Shared/Passingwind.Abp.ElsaModule.Host.Shared.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 </Project>
