--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.*" />
         <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
