--- a/src/Passingwind.ElsaDesigner/.vscode/settings.json
+++ b/src/Passingwind.ElsaDesigner/.vscode/settings.json
@@ -4,5 +4,11 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    },
+    "[dockercompose]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
     }
 }
