--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
@@ -47,6 +47,7 @@
         <!--<PackageReference Include="Elsa.Activities.Temporal.Quartz" Version="2.5.0" />-->
         <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.5.0" />
         <PackageReference Include="Elsa.Activities.Entity" Version="2.5.0" />
+        <!--<PackageReference Include="Elsa.Activities.Sql" Version="2.5.0" />-->
     </ItemGroup>
 
     <ItemGroup>
