--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,4 @@ host/Passingwind.Abp.ElsaModule.HttpApi.Host/Logs/logs.txt
 host/Passingwind.Abp.ElsaModule.Web.Host/Logs/logs.txt
 host/Passingwind.Abp.ElsaModule.Web.Unified/Logs/logs.txt
 host/Passingwind.Abp.ElsaModule.Blazor.Server.Host/Logs/logs.txt
+/host/Passingwind.Abp.ElsaModule.HttpApi.Host/appsettings.development.json
