--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/appsettings.json
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/appsettings.json
@@ -3,11 +3,11 @@
     "CorsOrigins": "https://*.ElsaModule.com,http://localhost:4200,http://localhost:44307,https://localhost:44307,http://localhost:16950"
   },
   "ConnectionStrings": {
-    "Default": "Server=192.168.100.201;Database=ElsaModuleTest;User Id=sa;Password=Pass@123;TrustServerCertificate=true;",
-    "Elsa": "Server=192.168.100.201;Database=ElsaModuleTest;User Id=sa;Password=Pass@123;TrustServerCertificate=true;"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=ElsaModuleTest;Trusted_Connection=True",
+    "Elsa": "Server=(LocalDb)\\MSSQLLocalDB;Database=ElsaModuleTest;Trusted_Connection=True"
   },
   "Redis": {
-    "Configuration": "192.168.100.201"
+    "Configuration": "127.0.0.1"
   },
   "AuthServer": {
     "Authority": "https://localhost:44319/",
