--- a/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application.Contracts/Passingwind.Abp.ElsaModule.Application.Contracts.csproj
@@ -8,13 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="5.1.4" />
-        <PackageReference Include="Volo.Abp.Authorization" Version="5.1.4" />
+        <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" /> 
+        <PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Authorization" Version="5.3.1" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain.Shared\Passingwind.Abp.ElsaModule.Domain.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa.Abstractions" Version="2.5.0" />
+        <PackageReference Include="Elsa.Abstractions" Version="2.8.2" />
     </ItemGroup>
-
+ 
 </Project>
