--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,13 @@ jobs:
         with:
           dotnet-version: 6.0.x
 
+      - id: changes
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            src:
+              - 'src/**'
+
       - name: Restore dependencies
         run: dotnet restore
 
@@ -51,28 +58,35 @@ jobs:
         run: dotnet build --no-restore -c Release
 
       - name: Pack
+        if: steps.changes.outputs.src == 'true'
         run: dotnet pack --no-build --no-restore -c Release /p:Version="${{env.GITCI_NEXT_VERSION}}" -o ./pack_output
 
       - uses: actions/setup-node@v3
         with:
           node-version: "16"
+
       - name: yarn
         run: |
           cd ./src/Passingwind.ElsaDesigner
           yarn
+
       - name: npm build
         run: |
           cd ./src/Passingwind.ElsaDesigner
           npm run build
+
       - name: copy build out
+        if: steps.changes.outputs.src == 'true'
         run: |
           cd ${{github.workspace}}/src/Passingwind.ElsaDesigner
           zip ${{github.workspace}}/pack_output/designer.zip -r ./dist/*
 
       - name: Push package
+        if: steps.changes.outputs.src == 'true'
         run: dotnet nuget push ./pack_output/*.nupkg --skip-duplicate --api-key ${{secrets.NUGET_TOKEN}} --source https://api.nuget.org/v3/index.json
 
       - name: Create Release
+        if: steps.changes.outputs.src == 'true'
         uses: ncipollo/release-action@v1
         with:
           tag: v${{env.GITCI_NEXT_VERSION}}
