--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <Import Project="..\..\common.props" />
 
@@ -34,9 +34,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.EntityFrameworkCore\Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.HttpApi\Passingwind.Abp.ElsaModule.HttpApi.csproj" />
         <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.Application\Passingwind.Abp.ElsaModule.Application.csproj" />
-        <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.EntityFrameworkCore\Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj" />
+        <ProjectReference Include="..\..\src\Passingwind.Abp.ElsaModule.MongoDB\Passingwind.Abp.ElsaModule.MongoDB.csproj" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Host.Shared\Passingwind.Abp.ElsaModule.Host.Shared.csproj" />
     </ItemGroup>
 
@@ -46,11 +47,9 @@
         <PackageReference Include="Elsa.Activities.Http" Version="2.8.2" />
         <PackageReference Include="Elsa.Activities.UserTask" Version="2.8.2" /> 
         <PackageReference Include="Elsa.Activities.BlobStorage" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.File" Version="2.8.2" />
-        <!--<PackageReference Include="Elsa.Activities.Temporal.Quartz" Version="2.5.0" />-->
+        <PackageReference Include="Elsa.Activities.File" Version="2.8.2" /> 
         <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Entity" Version="2.8.2" />
-        <!--<PackageReference Include="Elsa.Activities.Sql" Version="2.5.0" />-->
+        <PackageReference Include="Elsa.Activities.Entity" Version="2.8.2" /> 
     </ItemGroup>
 
     <ItemGroup>
