[feat] add dashboard instance statistic count

--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/appsettings.json
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/appsettings.json
@@ -7,6 +7,7 @@
     "Elsa": "Server=(LocalDb)\\MSSQLLocalDB;Database=ElsaModuleTest;Trusted_Connection=True"
   },
   "Redis": {
+    "IsEnabled": false,
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
