--- a/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
@@ -1,17 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\common.props" />
+    <Import Project="..\..\common.props" />
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.1" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.3.1" />
-    <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
-    <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
-  </ItemGroup>
- 
+    <ItemGroup>
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Caching" Version="5.3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
+        <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
