--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -41,14 +41,15 @@
         "not ie <= 10"
     ],
     "dependencies": {
+        "@ant-design/charts": "^1.4.2",
         "@ant-design/icons": "^4.7.0",
         "@ant-design/pro-components": "^1.1.23",
-        "@umijs/route-utils": "^2.2.0",
         "@antv/layout": "^0.3.1",
         "@antv/util": "^3.3.0",
         "@antv/x6": "^1.34.2",
         "@antv/x6-react-components": "^1.1.18",
         "@antv/x6-react-shape": "^1.6.2",
+        "@umijs/route-utils": "^2.2.0",
         "antd": "^4.23.2",
         "classnames": "^2.3.2",
         "lodash": "^4.17.21",
