--- a/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
+++ b/host/Passingwind.Abp.ElsaModule.HttpApi.Host/Passingwind.Abp.ElsaModule.HttpApi.Host.csproj
@@ -35,6 +35,7 @@
         <PackageReference Include="Volo.Abp.Account.HttpApi" Version="5.3.1" />
         <PackageReference Include="Volo.Abp.Account.Application" Version="5.2.1" />
         <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="5.2.1" />
+        <PackageReference Include="Dapper" Version="2.0.123" />
     </ItemGroup>
 
     <ItemGroup>
