--- a/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
+++ b/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.3.4" />
+        <PackageReference Include="Volo.Abp.MailKit" Version="5.3.4" />
     </ItemGroup>
 
     <ItemGroup>
