--- a/src/Passingwind.Abp.ElsaModule.Activities/Passingwind.Abp.ElsaModule.Activities.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Activities/Passingwind.Abp.ElsaModule.Activities.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="6.0.*" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.3.1" />
         <PackageReference Include="Volo.Abp.EventBus" Version="5.3.1" />
         <PackageReference Include="Volo.Abp.Emailing" Version="5.3.1" />
         <PackageReference Include="Elsa.Activities.Email" Version="2.8.2" />
@@ -16,6 +17,10 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Bookmarks\" />
     </ItemGroup>
 
 </Project>
