--- a/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
         <PackageReference Include="Volo.Abp.Ddd.Domain" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Caching" Version="5.3.1" />
     </ItemGroup>
 
     <ItemGroup>
