[feat] update to 2.9.1

--- a/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
+++ b/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
@@ -29,21 +29,22 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Email" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Http" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.UserTask" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.BlobStorage" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.File" Version="2.8.2" /> 
-        <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Entity" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.RabbitMq" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Sql" Version="2.8.2" />
-        <PackageReference Include="Elsa.Activities.Http.OpenApi" Version="2.8.2" />
+        <PackageReference Include="Elsa" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Email" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Http" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.UserTask" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.BlobStorage" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.File" Version="2.9.1" /> 
+        <PackageReference Include="Elsa.Activities.Temporal.Hangfire" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Entity" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.RabbitMq" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Sql" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Http.OpenApi" Version="2.9.1" />
     </ItemGroup>
 
     <ItemGroup> 
         <ProjectReference Include="..\..\..\src\Passingwind.Abp.ElsaModule.Activities\Passingwind.Abp.ElsaModule.Activities.csproj" /> 
+        <ProjectReference Include="..\..\..\src\Passingwind.Abp.ElsaModule.MongoDB\Passingwind.Abp.ElsaModule.MongoDB.csproj" /> 
         <ProjectReference Include="..\Demo.Application\Demo.Application.csproj" />
         <ProjectReference Include="..\Demo.EntityFrameworkCore\Demo.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\Demo.HttpApi\Demo.HttpApi.csproj" />
