--- a/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
+++ b/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
         <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.*" />
         <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Account.Web" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Autofac" Version="5.3.4" />
