--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -61,6 +61,7 @@
         "react": "^17.0.0",
         "react-dev-inspector": "^1.8.1",
         "react-dom": "^17.0.2",
+        "react-full-screen": "^1.1.1",
         "react-helmet-async": "^1.3.0",
         "react-monaco-editor": "^0.50.1",
         "umi": "^3.5.34",
