--- a/.gitignore
+++ b/.gitignore
@@ -254,4 +254,6 @@ paket-files/
 # 
 /host/**/Logs/*
 /demo-app/**/Logs/*
+/demo-app/**/wwwroot/dist/*
+!/demo-app/**/wwwroot/dist/README.md
 **/appsettings.*.json
