--- a/demo-app/src/Demo.Application.Contracts/Demo.Application.Contracts.csproj
+++ b/demo-app/src/Demo.Application.Contracts/Demo.Application.Contracts.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
         <PackageReference Include="Volo.Abp.ObjectExtending" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="5.3.4" />
