[fix] fix known issues

--- a/demo-app/src/Demo.HttpApi.Host/appsettings.json
+++ b/demo-app/src/Demo.HttpApi.Host/appsettings.json
@@ -1,9 +1,21 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.AspNetCore.Hosting": "Information",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Hangfire": "Information",
+      "Rebus": "Information",
+      "Elsa": "Debug"
+    }
+  },
+  "AllowedHosts": "*",
   "App": {
     "CorsOrigins": "https://*.Demo.com"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Demo;Trusted_Connection=True"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=AbpElsaDemo;Trusted_Connection=True"
   },
   "Redis": {
     "IsEnabled": false,
