--- a/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
+++ b/demo-app/src/Demo.HttpApi.Host/Demo.HttpApi.Host.csproj
@@ -11,23 +11,26 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Hangfire.Core" Version="1.7.28" />
-        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.*" />
-        <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
-        <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
-        <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-        <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.*" />
         <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Account.Web" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Autofac" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.3.4" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.3.4" />
         <PackageReference Include="Volo.Abp.MailKit" Version="5.3.4" />
         <PackageReference Include="Owl.Abp.CultureMap" Version="2.2.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Hangfire.Core" Version="1.7.28" />
+        <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="6.0.*" />
+        <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+        <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.*" />
+        <PackageReference Include="DistributedLock.FileSystem" Version="1.0.1" />
+        <PackageReference Include="DistributedLock.Redis" Version="1.0.2" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0" />
     </ItemGroup>
 
     <ItemGroup>
