--- a/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
+++ b/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
@@ -2,7 +2,7 @@
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>Passingwind.Abp.ElsaModule</RootNamespace>
     </PropertyGroup>
 
@@ -11,8 +11,12 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.3.1" />
         <PackageReference Include="Volo.Abp.EventBus" Version="5.3.1" />
         <PackageReference Include="Volo.Abp.Emailing" Version="5.3.1" />
-        <PackageReference Include="Elsa.Activities.Email" Version="2.9.1" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Elsa.Activities.Email" Version="2.9.1" />
+        <PackageReference Include="Elsa.Activities.Http" Version="2.9.1" />
     </ItemGroup>
 
     <ItemGroup>
