💡 add workflow definition detail page

--- a/demo-app/src/Demo.HttpApi.Host/nlog.config
+++ b/demo-app/src/Demo.HttpApi.Host/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="\temp\internal-nlog-AspNetCore.txt">
+      internalLogFile="/temp/internal-nlog.log">
 
     <extensions>
         <add assembly="NLog.Web.AspNetCore"/>
@@ -11,12 +11,12 @@
 
     <targets>
         <target xsi:type="File" name="allfile" fileName="${currentdir}/logs/${shortdate}.log"
-                layout="${longdate} ${event-properties:item=EventId} [${level:uppercase=true}] ${logger}: ${message} ${exception:format=tostring}" />
-        
-        <target xsi:type="ColoredConsole" name="lifetimeConsole" layout="${longdate} ${level} ${logger}: ${message} ${exception:format=tostring}" />
+                layout="${longdate} ${event-properties:item=EventId} [${level:uppercase=true}] ${logger}: ${message:withexception=true}" />
+
+        <target xsi:type="ColoredConsole" name="lifetimeConsole" />
     </targets>
 
     <rules>
-        <logger name="*" writeTo="allfile" />
+        <logger name="*" writeTo="lifetimeConsole, allfile" />
     </rules>
 </nlog>
