--- a/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
@@ -8,14 +8,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.1" />
-        <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.3.1" />
-        <PackageReference Include="Volo.Abp.Caching" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Ddd.Application" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Caching" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Fody" Version="6.6.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
