--- a/src/Passingwind.Abp.ElsaModule.Domain.Shared/Passingwind.Abp.ElsaModule.Domain.Shared.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain.Shared/Passingwind.Abp.ElsaModule.Domain.Shared.csproj
@@ -10,15 +10,22 @@
 
     <ItemGroup>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-        <PackageReference Include="Volo.Abp.Validation" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Validation" Version="6.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.5" />
-        <PackageReference Include="Elsa.Abstractions" Version="2.9.1" />
+        <PackageReference Include="Elsa.Abstractions" Version="2.9.2" />
     </ItemGroup>
 
     <ItemGroup>
         <EmbeddedResource Include="Localization\ElsaModule\*.json" />
         <Content Remove="Localization\ElsaModule\*.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Fody" Version="6.6.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
