--- a/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Domain/Passingwind.Abp.ElsaModule.Domain.csproj
@@ -12,13 +12,20 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="5.3.1" />
-        <PackageReference Include="Volo.Abp.Caching" Version="5.3.1" />
-        <PackageReference Include="Volo.Abp.DistributedLocking" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.Ddd.Domain" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Caching" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.DistributedLocking" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa" Version="2.9.1" />
+        <PackageReference Include="Elsa" Version="2.9.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Fody" Version="6.6.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
  
 </Project>
