--- a/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
+++ b/src/Passingwind.Abp.ElsaModule.EntityFrameworkCore/Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj
@@ -8,12 +8,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="6.0.1" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Elsa.Abstractions" Version="2.9.1" />
+        <PackageReference Include="Elsa.Abstractions" Version="2.9.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Fody" Version="6.6.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
  
 </Project>
