--- a/src/Passingwind.Abp.ElsaModule.HttpApi/Passingwind.Abp.ElsaModule.HttpApi.csproj
+++ b/src/Passingwind.Abp.ElsaModule.HttpApi/Passingwind.Abp.ElsaModule.HttpApi.csproj
@@ -8,8 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="5.3.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.1" />
     <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Application.Contracts\Passingwind.Abp.ElsaModule.Application.Contracts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Fody" Version="6.6.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
  
 </Project>
