--- a/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
+++ b/src/Passingwind.Abp.ElsaModule.MongoDB/Passingwind.Abp.ElsaModule.MongoDB.csproj
@@ -9,8 +9,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.MongoDB" Version="5.3.1" />
+        <PackageReference Include="Volo.Abp.MongoDB" Version="6.0.1" />
         <ProjectReference Include="..\Passingwind.Abp.ElsaModule.Domain\Passingwind.Abp.ElsaModule.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="Fody" Version="6.6.4">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
  
 </Project>
