💡  update email smtp settings

--- a/demo-app/src/Demo.HttpApi.Host/nlog.config
+++ b/demo-app/src/Demo.HttpApi.Host/nlog.config
@@ -10,10 +10,14 @@
     </extensions>
 
     <targets>
-        <target xsi:type="File" name="allfile" fileName="${currentdir}/logs/${shortdate}.log"
-                layout="${longdate} ${event-properties:item=EventId} [${level:uppercase=true}] ${logger}: ${message:withexception=true}" />
+        <target xsi:type="File" 
+                name="allfile" 
+                fileName="${currentdir}/logs/${shortdate}.log" 
+                layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}"  />
 
-        <target xsi:type="ColoredConsole" name="lifetimeConsole" />
+        <target xsi:type="ColoredConsole" 
+                name="lifetimeConsole" 
+                layout="${longdate}|${level:uppercase=true}|${logger}|${message:withexception=true}" />
     </targets>
 
     <rules>
