--- a/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
+++ b/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
@@ -22,6 +22,7 @@
     <ItemGroup>
         <PackageReference Include="Elsa.Activities.Email" Version="2.9.2" />
         <PackageReference Include="Elsa.Activities.Http" Version="2.9.2" />
+        <PackageReference Include="Elsa.Activities.Temporal.Common" Version="2.9.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -29,6 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Activities\Temporal\" />
       <Folder Include="Controllers\" />
     </ItemGroup>
 
