--- a/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
+++ b/src/Passingwind.Abp.ElsaModule.ElsaExtensions/Passingwind.Abp.ElsaModule.ElsaExtensions.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Volo.Abp.EventBus" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.Emailing" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.1" />
+        <PackageReference Include="IdentityModel" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
