--- a/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
+++ b/src/Passingwind.Abp.ElsaModule.Application/Passingwind.Abp.ElsaModule.Application.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.Ddd.Application" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.Caching" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.Authorization.Abstractions" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
