--- a/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
+++ b/app/src/Passingwind.WorkflowApp.Application/Passingwind.WorkflowApp.Application.csproj
@@ -14,10 +14,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.13" />
         <PackageReference Include="Volo.Abp.Account.Application" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.Identity.Application" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="6.0.1" />
         <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="6.0.1" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="6.0.1" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
 </Project>
