--- a/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
+++ b/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
@@ -79,4 +79,8 @@
         <None Remove="Logs\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\" />
+    </ItemGroup>
+
 </Project>
