[fix] fix know issues

--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -4,7 +4,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal as base
 # RUN sed -i "s@archive.ubuntu.com@mirrors.aliyun.com@g" /etc/apt/sources.list
 
 #
-RUN apt-get update -y && apt-get install -y libgdiplus && apt-get clean
+# RUN apt-get update -y && apt-get install -y libgdiplus && apt-get clean
 
 #
 RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1.0/g' /etc/ssl/openssl.cnf
@@ -16,4 +16,4 @@ COPY app /app
 # 
 WORKDIR /app
 
-ENTRYPOINT ["dotnet", "Passingwind.Abp.ElsaModule.HttpApi.Host.dll"] 
+ENTRYPOINT ["dotnet", "Passingwind.WorkflowApp.Web.dll"] 
