update caching activity & oauth client activity

--- a/app/src/Passingwind.WorkflowApp.Web/appsettings.json
+++ b/app/src/Passingwind.WorkflowApp.Web/appsettings.json
@@ -27,7 +27,8 @@
   },
   "Redis": {
     "IsEnabled": false,
-    "Configuration": "127.0.0.1"
+    "Configuration": "127.0.0.1",
+    "DefaultDatabase": 0
   },
   "AuthServer": {
     "Authority": "https://localhost:44324",
