--- a/devops/Dockerfile
+++ b/devops/Dockerfile
@@ -1,19 +1,16 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0-focal as base
+FROM  mcr.microsoft.com/dotnet/aspnet:7.0-alpine
 
-# change source
-# RUN sed -i "s@archive.ubuntu.com@mirrors.aliyun.com@g" /etc/apt/sources.list
+# 
+WORKDIR /app
 
 #
 # RUN apt-get update -y && apt-get install -y libgdiplus && apt-get clean
 
 #
-RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1.0/g' /etc/ssl/openssl.cnf
-RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1.0/g' /usr/lib/ssl/openssl.cnf
+#RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1.0/g' /etc/ssl/openssl.cnf
+#RUN sed -i 's/MinProtocol = TLSv1.2/MinProtocol = TLSv1.0/g' /usr/lib/ssl/openssl.cnf
 
 # 
 COPY app /app
 
-# 
-WORKDIR /app
-
-ENTRYPOINT ["dotnet", "Passingwind.WorkflowApp.Web.dll"] 
+ENTRYPOINT ["dotnet", "Passingwind.WorkflowApp.Web.dll"]
