--- a/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
+++ b/app/src/Passingwind.WorkflowApp.Web/Passingwind.WorkflowApp.Web.csproj
@@ -12,6 +12,7 @@
         <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
         <PreserveCompilationReferences>true</PreserveCompilationReferences>
         <UserSecretsId>Passingwind.WorkflowApp-4681b4fd-151f-4221-84a4-929d86723e4c</UserSecretsId>
+        <InvariantGlobalization>false</InvariantGlobalization>
     </PropertyGroup>
 
     <ItemGroup>
