--- a/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
+++ b/app/src/Passingwind.WorkflowApp.EntityFrameworkCore/Passingwind.WorkflowApp.EntityFrameworkCore.csproj
@@ -10,6 +10,9 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\src\Passingwind.Abp.ElsaModule.EntityFrameworkCore\Passingwind.Abp.ElsaModule.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\Passingwind.WorkflowApp.Domain\Passingwind.WorkflowApp.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.0.2" />
         <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.0.2" />
         <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="7.0.2" />
