update gitci yaml

--- a/.gitci/release-config.yml
+++ b/.gitci/release-config.yml
@@ -11,6 +11,8 @@
       - "feat"
       - "⬆️"
       - ":arrow_up:"
+      - "🚀"
+      - ":rocket:"
     labels:
       - "Versioning - Minor"
   patch:
