--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,12 +3,11 @@ version: '3.8'
 services:
     app:
         build: .
-        # image: backend:latest 
         ports:
             - 10000:80
         restart: always
         environment:
             - TZ=Asia/Shanghai
         volumes:
-            # - ./appsettings.json:/app/appsettings.Production.json
+            - ./appsettings.json:/app/appsettings.json
             #
