--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -54,6 +54,7 @@
         "antd": "^4.24.8",
         "classnames": "^2.3.2",
         "fr-generator": "^2.8.4",
+        "jsonschema": "^1.4.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "monaco-editor": "^0.34.1",
@@ -67,7 +68,8 @@
         "react-full-screen": "^1.1.1",
         "react-helmet-async": "^1.3.0",
         "umi": "^3.5.37",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "yaml": "^2.3.1"
     },
     "devDependencies": {
         "@ant-design/pro-cli": "^2.1.5",
