--- a/src/Passingwind.ElsaDesigner/.vscode/settings.json
+++ b/src/Passingwind.ElsaDesigner/.vscode/settings.json
@@ -19,5 +19,8 @@
     },
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
