--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -59,6 +59,7 @@
         "moment": "^2.29.4",
         "monaco-editor": "^0.34.1",
         "monaco-editor-webpack-plugin": "^7.0.1",
+        "monaco-yaml": "^4.0.4",
         "omit.js": "^2.0.2",
         "rc-menu": "^9.7.2",
         "rc-util": "^5.24.5",
