💡 enhanced definition detail page

--- a/.gitci/release-config.yml
+++ b/.gitci/release-config.yml
@@ -8,7 +8,7 @@
   minor:
     commits:
       - "[feat]"
-      - "feat"
+      - "feat:"
       - "⬆️"
       - ":arrow_up:"
       - "🚀"
@@ -18,7 +18,7 @@
   patch:
     commits:
       - "[fix]"
-      - "fix"
+      - "fix:"
       - ":bug:"
       - "🐛"
     labels:
