--- a/src/Passingwind.ElsaDesigner/package.json
+++ b/src/Passingwind.ElsaDesigner/package.json
@@ -64,6 +64,7 @@
         "rc-menu": "^9.7.2",
         "rc-util": "^5.24.5",
         "react": "^17.0.2",
+        "react-countup": "^6.4.2",
         "react-dev-inspector": "^1.8.1",
         "react-dom": "^17.0.2",
         "react-full-screen": "^1.1.1",
